# wamest

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: bank_constraints.yaml  coverage_registry.yaml  ffiec002_call_report.yaml  ffiec_call_report.yaml  full_coverage_release.yaml  h15_series.yaml  model_defaults.yaml  model_public_preview.yaml  model_toy_multifamily.yaml  ncua_call_report.yaml  sector_definitions.yaml  sector_definitions_full.yaml  source_manifest.yaml  z1_series_catalog.yaml  z1_series_catalog_full.yaml
docs/: full_coverage_output_schema.md  output_schema.md  release_limitations.md  release_notes.md  revaluation_methodology.md  source_notes.md
scripts/: build_bank_constraint_panel.py  build_benchmark_returns.py  build_foreign_anchor_panel.py  build_foreign_nowcast_panel.py  build_full_coverage_release.py  build_output_metadata_report.py  build_public_release_report.py  build_sector_panel.py  calibrate_fed.py  check_public_release_hygiene.py  estimate_effective_maturity.py  export_site_data.py  fetch_ffiec002_via_chrome_cdp.py  fetch_public_sources.py  launch_ffiec_chrome.py  run_toy_pipeline.py  sanity_checks.py
tests/: test_coverage_registry.py  test_export_site_data.py  test_ffiec002_pipeline.py  test_ffiec_pipeline.py  test_full_coverage_config_contract.py  test_full_coverage_contract_build.py  test_full_coverage_release.py  test_full_coverage_release_cli.py  test_h15_soma_estimation.py  test_model_config_contract.py  test_ncua_pipeline.py  test_output_metadata_report.py  test_public_output_schema.py  (+6 more)
(+70 files in other folders)
