[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treasury-sector-maturity"
version = "0.1.0"
description = "Research preview for estimating maturity-related metrics for sector Treasury holdings"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "playwright>=1.58",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "pyarrow>=14.0",
  "requests>=2.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
